<resources>
    <string name="app_name">Apps</string>
    <string name="registration">REGISTRATION</string>
    <string name="name">Name</string>
    <string name="gender">GENDER</string>
    <string name="address">ADDRESS:</string>
    <string name="city">CITY:</string>
    <string name="district">DISTRICT:</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="pincd">PINCODE:</string>
    <string name="password">password</string>
    <string name="egender">GENDER:</string>
    <string name="userdetails">UserDetails</string>
    <string name="door_no">DOOR NO:</string>
    <string name="street_no">STREET NO:</string>
    <string name="phone_no">PHONE NO:</string>
    <string name="card_no">CARD NO:</string>
    <string name="pin_code">PIN CODE:</string>
    <string name="preview">Preview</string>
    <string name="previiew">preview</string>
    <string name="enter">ENTER</string>

    <string name="input_username">Input Username</string>
    <string name="passwordd">Password</string>
    <string name="loginn">Login</string>
    <string name="card_details">CARD DETAILS</string>
    <string name="father_husband_name">Father/Husband Name</string>
    <string name="father_husband_namee">FATHER/HUSBAND NAME:</string>
    <string name="birthday">birthday</string>
    <string name="birthdayY">BIRTHDAY</string>
    <string name="father_husband_namMe">FATHER/HUSBAND_NAME:</string>
    <string name="birthdayy">BIRTHDAY:</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="cards_detail">Cards Detail</string>
    <string name="card_holder_name">Card Holder Name:</string>
    <string name="father_husbandd_name">Father/Husband Name:</string>
    <string name="birthday_date">Birthday Date:</string>
    <string name="addresss">Address:</string>
    <string name="Name">Name:</string>
    <string name="fatherr_husband_name">Father/Husband Name:</string>
    <string name="genderr">Gender:</string>
    <string name="malee">Male</string>
    <string name="femalee">Female</string>
    <string name="Addresss">Address</string>
    <string name="doorno">DoorNo</string>
    <string name="streetno">StreetNo</string>
    <string name="phoneno">PhoneNo</string>
    <string name="cityt">City</string>
    <string name="District">District</string>
    <string name="pincode">PinCode</string>
    <string name="Password">Password</string>
    <string name="backk">Back</string>
    <string name="submitt">Submit</string>
    <string name="nameE">NAME</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="paassword">PASSWORD</string>
    <string name="card_type">CARD TYPE</string>
    <string name="number">number</string>
    <string name="numbre">NUMBER</string>
    <string name="button">Button</string>
    <string name="text">TEXT</string>
    <string name="numberi">Number</string>
    <string name="SEND">snd</string>
    <string name="hello">Hello</string>
    <string name="dd_mm_yy">dd-mm-yy</string>
    <string name="dd_mm_yyi">DD_MM_YY</string>
    <string name="send">SEND</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="cardtype">CardType:</string>
    <string name="nphhs">NPHHS</string>
    <string name="phhrice">PHHRICE</string>
    <string name="phha">PHHA</string>
    <string name="nphh">NPHH</string>
    <string name="nphhnc">NPHHNC</string>
    <string name="card_typee">CARD TYPE:</string>
    <string name="add">Add</string>
    <string name="texti">Text</string>
    <string name="viewdata">ViewData</string>


</resources>
